Intro component done

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,11 +5,18 @@
 }
 
 body {
-  height: 100vh;
   background-color: #14173d;
   color: white;
   font-family: "GilroyMedium";
   letter-spacing: 1px;
+
+  #root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
 }
 
 @font-face {
