--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 .App {
     height: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    
 }
