--- a/src/components/scss/form.scss
+++ b/src/components/scss/form.scss
@@ -24,7 +24,16 @@
 }
 
 .form {
-    height: 25%;
+    width: 100%;
+    text-align: center;
+    .input {
+        width: 80%;
+        color: white;
+        border: 2px solid white;
+        background: none;
+        height: 4em;
+        padding-left: 1em;
+    }
 }
 
 .buttonContainer {
@@ -42,7 +51,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 100%;
+        width: 40%;
         height: 4em;
 
         .buttonText {
