--- a/src/components/scss/form.scss
+++ b/src/components/scss/form.scss
@@ -24,8 +24,14 @@
 }
 
 .form {
+    height: 25%;
     width: 100%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    
     .input {
         width: 80%;
         color: white;
@@ -48,14 +54,14 @@
         color: #ffffff;
         background-color: #14173d;
         border: 2px solid #ffffff;
+        text-decoration: none;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 40%;
-        height: 4em;
+        width: 50%;
+        height: 3.5em;
 
         .buttonText {
-            font-size: 1.2em;
             margin-left: 0.8em;
             font-family: "GilroyBold";
         }
