--- a/src/components/scss/form.scss
+++ b/src/components/scss/form.scss
@@ -6,7 +6,8 @@
     align-items: center;
 
     .zentity {
-        width: 70%;
+        width: 6em;
+        height: 2em;
     }
 }
 
@@ -32,13 +33,27 @@
     align-items: center;
     
     .input {
-        width: 80%;
+        width: 75%;
         color: white;
         border: 2px solid white;
         background: none;
         height: 4em;
         padding-left: 1em;
         margin-bottom: 2em;
+    }
+
+    .errorContainer {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        text-align: start;
+
+        .error {
+            font-size: 0.7em;
+            width: 70%;
+            margin-left: 2em;
+        }
     }
 }
 
@@ -58,7 +73,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 50%;
+        margin-bottom: 3em;
+        width: 45%;
         height: 3.5em;
 
         .buttonText {
