--- a/src/components/scss/profile.scss
+++ b/src/components/scss/profile.scss
@@ -31,10 +31,7 @@
                 width: 3em;
                 height: 3em;
             }
-
         }
-
-       
     }
 
     .userInfo {
@@ -45,6 +42,7 @@
         justify-content: space-between;
 
         .infoCard {
+            height: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -59,6 +57,10 @@
                     font-size: 0.8em;
                     margin-bottom: 0.5em;
                 }
+
+                .infoData {
+                    font-size: 1em;
+                }
             }
             
             .actions {
@@ -67,7 +69,7 @@
                 display: flex;
                 flex-direction: row-reverse;
                 justify-content: space-between;
-                align-items: flex-end;
+                align-items: center;
 
                 .delete {
                     color: #EA573E;
@@ -77,7 +79,37 @@
                 .edit {
                     color: #1FD6BA;
                     font-size: 0.8em;
+                    background: none;
+                    border: none;
                 }
+            }
+
+            .changeData {
+                    width: 100%;
+                    height: 90%;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    border: 2px solid #1FD6BA;
+
+                    .changeDataInput {
+                        background: none;
+                        border: none;
+                        width: 90%;
+                        height: 100%;
+                        font-family: "GilroyBold";
+                        font-size: 1em;
+                        margin-left: 2em;
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+
+                    .changeDataAction {
+                        background: none;
+                        border: none;
+                    }
             }
         }
     }
