--- a/src/components/scss/profile.scss
+++ b/src/components/scss/profile.scss
@@ -74,6 +74,8 @@
                 .delete {
                     color: #EA573E;
                     font-size: 0.8em;
+                    background: none;
+                    border: none;
                 }
 
                 .edit {
